--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <!-- Lightbox -->
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-  <title>Vivere</title>
+  <title>Vivere {% block title %}{% endblock %}</title>
 </head>
 
 <body>
