--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %} | {{listing.title}}{% endblock %}
+
 {% block content %}
      <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
