--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %} | Welcome{% endblock %}
+
 {% load static %}
 
 {% block content %}
@@ -64,6 +66,8 @@
       </div>
     </div>
   </section>
+
+  {% include 'partials/_alerts.html' %}
 
   <!-- Listings -->
   <section id="listings" class="py-5">
